[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar"
authors = [
    {name = "Tianyi Hao", email = "tianyi.hao@wisc.edu"},
]
description = "OSCAR: configure and debug variational quantum algorithms efficiently"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.23.5",
    "scipy>=1.10.1",
    "matplotlib>=3.7.1",
    "cvxpy>=1.3.1",
    "qiskit>=0.43.0",
    "qiskit_finance>=0.3.4",
    "qiskit_optimization>=0.5.0",
    "qiskit_nature>=0.6.1",
    "networkx>=2.8.8",
    "pyscf>=2.2.1",
    "scikit-quant[nomad]>=0.8.2",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["oscar"]

[tool.setuptools_scm]
write_to = "oscar/_version.py"

[tool.black]
line-length = 99 # override black's default line-length
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 