[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar"
authors = [
    {name = "Tianyi Hao", email = "tianyi.hao@wisc.edu"},
]
description = "OSCAR: configure and debug variational quantum algorithms efficiently"
readme = "README.md"
requires-python = ">=3.8"
keywords = []
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.23.5",
    "scipy>=1.10.1",
    "matplotlib>=3.7.1",
    "cvxpy>=1.3.1",
    "qiskit>=0.43.0",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["oscar"]

[tool.setuptools_scm]
write_to = "oscar/_version.py"

[tool.black]
line-length = 99 # override black's default line-length
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 